[tool.poetry]
name = "threat-intell2"
version = "0.1.0"
description = "A project for scraping and analyzing cybersecurity threat intelligence data."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"
aiohttp-client-cache = "^0.5.0"
beautifulsoup4 = "^4.10.0"
goose3 = "^3.1.0"
pydantic = "^2.0.0"
langchain = "^0.0.1"
tenacity = "^8.0.1"
python-dotenv = "^0.19.2"
openai = "^0.27.0"
langgraph = "^0.0.10"  # Updated this line to use the latest version
asyncio = "^3.4.3"
typing = "^3.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "threat-intell2"
version = "0.1.0"
description = "A threat intelligence analysis tool"
authors = ["Your Name <your.email@example.com>"]
dependencies = [
    "langgraph>=0.2.21",
    "aiohttp>=3.10.5",
    "aiohttp-client-cache>=0.11.1",
    "bs4>=0.0.2",
    "goose3>=3.1.19",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "openai>=1.45.0",
    "aiosqlite>=0.20.0",
    "langchain-openai>=0.2.0",
    "spacy>=3.7.6",
    "pip>=24.2",
    "tiktoken>=0.7.0",
]
